--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "css-loader": "^0.28.4",
     "eslint": "^4.10.0",
     "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-watch": "^3.1.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
