--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "wow-website",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
+    "axios": "^0.17.1",
+    "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "prop-types": "^15.6.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-icons": "^2.2.5"
+    "react-icons": "^2.2.5",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.10.0",
@@ -23,10 +28,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
-    "react-scripts": "1.0.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.2",
@@ -34,8 +36,8 @@
   },
   "scripts": {
     "dev": "webpack -d --watch",
-    "start": "node index.js",
-    "build": "webpack -p",
+    "start": "webpack-dev-server",
+    "build": "webpack --config webpack.config.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
