--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "dev": "webpack -d --watch",
     "start": "webpack-dev-server",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js && cp -v src/client/index.html build/index.html",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
