--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.2",
     "webpack-dev-server": "^2.7.1"
   },
