--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.5",
+    "react-loader": "^2.4.2",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.1"
   },
   "devDependencies": {
